Finalizado a home page do site

--- a/src/assets/SCSS/_colors.scss
+++ b/src/assets/SCSS/_colors.scss
@@ -1,5 +1,6 @@
 $mainColor: #020a1a;
+$black: #010815;
+$blueII: rgba(10, 42, 106, 1);
 $textColor: #dff9fb;
-$ColorGoldI: #e58e26;
-$ColorGoldII: #f6b93b;
-$colorButton: #1e3799;
+$gold: #E28B1E;
+$bgInput: rgb(218, 218, 218);
