--- a/src/assets/SCSS/main.scss
+++ b/src/assets/SCSS/main.scss
@@ -1,4 +1,6 @@
-@import './bodyText';
+@import './container';
+@import './text';
 @import './button';
 @import './colors';
 @import './titles';
+@import './global';
