--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -59,4 +59,11 @@
         
         @include formText;
     }
+
+    @media (max-width: $mobile) {
+        .form__highline {
+            display: block;
+
+        }
+    }
 }
