--- a/src/components/Social_links/style.scss
+++ b/src/components/Social_links/style.scss
@@ -14,4 +14,12 @@
         position: relative;
         z-index: 2;
     }
+
+    @media (min-width: $tablet1) and (max-width: $tablet3) {
+        gap: 20px;
+    }
+
+    @media (max-width: $mobile) {
+        gap: 16px;
+    }
 }
