--- a/src/views/DetailsProjects/style.scss
+++ b/src/views/DetailsProjects/style.scss
@@ -1,19 +1,29 @@
 @import '@/assets/SCSS/main.scss';
 
 .projects {
-    
+    padding: 120px 0;
     &__list {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        column-gap: 24px;
-        row-gap: 32px;
-        background-color: red;
+        gap: 40px;
 
         &__item {
-            width: 50%;
+            background-color: lighten($black, 2%);
+            box-shadow: 0 8px 80px rgba(9, 6, 3, .5);
+            border-radius: 20px;
 
             &__img {
-                width: 400px;
+                width: 100%;
+                border-radius: 5px;
+            }
+
+            .description {
+                padding: 32px 16px;
+
+                .routerProject {
+                    display: flex;
+                    gap: 32px;
+                }
             }
         }
     }
