--- a/src/views/pages/Home/style.scss
+++ b/src/views/pages/Home/style.scss
@@ -35,4 +35,47 @@
             background-image: linear-gradient(to left, $blueII -46%, $black 37%);   
         }
     }
+
+    @media (min-width: $tablet1) and (max-width: $tablet2) {
+        padding-top: 120px;
+
+        &__info {
+            padding: 64px 0 0;
+            height: auto;
+            width: 100%;
+        }
+
+        &__author {
+            padding: 0;
+            &__img {
+                width: 332px;
+            } 
+        }
+    }
+
+    @media (max-width: $mobile) {
+        
+        .container {
+            flex-direction: column;
+        }
+
+        &__info {
+            padding: 64px 0 0;
+            height: auto;
+            width: 100%;
+        }
+
+        &__author {
+            display: block;
+            width: 100%;
+            height: auto;
+            margin-top: 40px;
+            
+            &__img {
+                width: 100%;
+            } 
+        }
+
+    }
+
 }
