--- a/src/views/pages/Services/style.scss
+++ b/src/views/pages/Services/style.scss
@@ -15,6 +15,7 @@
     //control the size of the text tag p
     .middle-text {
         max-width: 655px;
+        width: 100%;
     }
 
     &__list {
@@ -49,6 +50,22 @@
                 z-index: -1;
                 border-radius: 10px;
             }
+        }
+    }
+
+    @media (min-width: $tablet1) and (max-width: $tablet3) {
+        &__list {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+
+    @media (max-width: $mobile) {
+        &__list {
+            grid-template-columns: 1fr;
+        }
+
+        .middle-text {
+            text-align: justify;
         }
     }
 }
