--- a/src/views/pages/Skills/style.scss
+++ b/src/views/pages/Skills/style.scss
@@ -15,10 +15,6 @@
         text-align: center;
         max-width: 500px;
     }
-    
-    .text-italic {
-        font-style: italic;
-    }
 
     &__list {
         display: flex;
@@ -49,6 +45,27 @@
 
                 @include convertPxToEm;
             }
+        }
+    }
+
+    @media (min-width: $tablet1) and (max-width: $tablet3) {
+        &__list {
+            justify-content: center;
+        }
+    }
+
+    @media (max-width: $mobile) {
+        &__list {
+            justify-content: center;
+
+            &__item  {
+                width: 132px;
+            }
+
+        }
+
+        .middle-text {
+            text-align: justify;
         }
     }
 }
