--- a/src/assets/SCSS/_button.scss
+++ b/src/assets/SCSS/_button.scss
@@ -62,6 +62,10 @@
         left: 100%;
         }
     }
+
+    @media (max-width: 410px) {
+        display: none;
+    }
 }
 
 .buttonII {
@@ -114,7 +118,6 @@
         transform: translateX(100%);
     }
 }
-
 
 .buttonIII {
     width: 40px; 
