--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -1,68 +1,68 @@
 @import '@/assets/SCSS/main';
 
 .form {
-    max-width: 640px;
+  max-width: 640px;
+  width: 100%;
+  border-radius: 20px;
+  padding: 24px;
+  background-color: $blueII;
+  box-shadow: 0 8px 80px rgba(30, 30, 40, 0.2);
+
+  &__highline {
+    display: flex;
+    gap: 24px;
+  }
+
+  &__item {
+    display: block;
+    margin-bottom: 24px;
+    text-align: left;
+
+    &__input {
+      margin-top: 16px;
+      padding: 8px 12px;
+      border-radius: 10px;
+      width: 100%;
+      outline: none;
+      border: none;
+      background-color: $bgInput;
+
+      @include formText;
+    }
+
+    &__message {
+      margin-top: 16px;
+      padding: 8px 12px;
+      height: 100px;
+      width: 100%;
+      border-radius: 10px;
+    }
+  }
+
+  &__option {
+    margin-top: 16px;
     width: 100%;
-    border-radius: 20px;
-    padding: 24px;
-    background-color: $blueII;
-    box-shadow: 0 8px 80px rgba(30, 30, 40, .2);
+    margin-bottom: 24px;
+    padding: 8px;
+    border-radius: 10px;
+    background-color: $bgInput;
 
-    &__highline {
-        display: flex;
-        gap: 24px;
+    @include formText;
+  }
+
+  #message {
+    resize: none;
+    background-color: $bgInput;
+    margin-bottom: 0;
+    outline: none;
+    border: none;
+
+    @include formText;
+  }
+
+  @media (max-width: $mobile) {
+    .form__highline {
+      display: block;
     }
-
-    &__item {
-        display: block;
-        margin-bottom: 24px;
-        text-align: left;
-
-        &__input {
-            margin-top: 16px;
-            padding: 8px 12px;
-            border-radius: 10px;
-            width: 100%;
-            outline: none;
-            border: none;
-            background-color: $bgInput;
-            
-            @include formText;
-        }
-
-        &__message {
-            margin-top: 16px;
-            padding: 8px 12px;
-            height: 100px;
-            width: 100%;
-            border-radius: 10px;
-        }
-    }
-
-    &__option {
-        margin-top: 16px;
-        width: 100%;
-        margin-bottom: 24px;
-        padding: 8px;
-        border-radius: 10px;
-        background-color: $bgInput;
-        
-        @include formText;
-    }
-
-    #message {
-        resize: none;
-        background-color: $bgInput;
-        margin-bottom: 0;
-        outline: none;
-        border: none;
-        
-        @include formText;
-    }
-
-    @media (max-width: $mobile) {
-        .form__highline {
-            display: block;
-        }
-    }
+  }
 }
