--- a/src/assets/SCSS/_button.scss
+++ b/src/assets/SCSS/_button.scss
@@ -1,210 +1,211 @@
 @import './colors';
 
-
 .buttonI {
-    position: relative;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-    padding-block: 0.5rem;
-    padding-inline: 1.25rem;
-    background-color: $gold;
-    border-radius: 9999px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: $textColor;
-    gap: 10px;
-    font-weight: bold;
-    border: 3px solid $gold;
-    outline: none;
-    overflow: hidden;
-    font-size: 15px;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  padding-block: 0.5rem;
+  padding-inline: 1.25rem;
+  background-color: $gold;
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: $textColor;
+  gap: 10px;
+  font-weight: bold;
+  border: 3px solid $gold;
+  outline: none;
+  overflow: hidden;
+  font-size: 15px;
 
-    &:hover {
-        transform: scale(1.05);
-        border-color: $gold;
+  &:hover {
+    transform: scale(1.05);
+    border-color: $gold;
+  }
+
+  &:hover {
+    transform: translate(4px);
+  }
+
+  &:hover::before {
+    animation: shine 1.5s ease-out infinite;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 100%;
+    background-image: linear-gradient(
+      120deg,
+      rgba(255, 255, 255, 0) 30%,
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0) 70%
+    );
+    top: 0;
+    left: -100px;
+    opacity: 0.6;
+  }
+
+  @keyframes shine {
+    0% {
+      left: -100px;
     }
 
-    &:hover {
-        transform: translate(4px);
+    60% {
+      left: 100%;
     }
 
-    &:hover::before {
-        animation: shine 1.5s ease-out infinite;
+    to {
+      left: 100%;
     }
+  }
 
-    &::before {
-        content: "";
-        position: absolute;
-        width: 100px;
-        height: 100%;
-        background-image: linear-gradient(
-            120deg,
-            rgba(255, 255, 255, 0) 30%,
-            rgba(255, 255, 255, 0.8),
-            rgba(255, 255, 255, 0) 70%
-        );
-        top: 0;
-        left: -100px;
-        opacity: 0.6;
-    }
-
-    @keyframes shine {
-        0% {
-        left: -100px;
-        }
-    
-        60% {
-        left: 100%;
-        }
-    
-        to {
-        left: 100%;
-        }
-    }
-
-    @media (max-width: 410px) {
-        display: none;
-    }
+  @media (max-width: 410px) {
+    display: none;
+  }
 }
 
 .buttonII {
+  position: relative;
+  overflow: hidden;
+  height: 3rem;
+  padding: 0 2rem;
+  border-radius: 1.5rem;
+  background: transparent;
+  color: $gold;
+  border: 2px solid $gold;
+  cursor: pointer;
+  transition:
+    color 0.3s ease,
+    border-color 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-wrap: nowrap;
+
+  @include convertPxToEm(15px);
+
+  &:hover::before {
+    transform: scaleX(1);
+  }
+
+  .button-content {
     position: relative;
-    overflow: hidden;
-    height: 3rem;
-    padding: 0 2rem;
-    border-radius: 1.5rem;
-    background: transparent;
-    color: $gold;
-    border: 2px solid $gold;
-    cursor: pointer;
-    transition: color 0.3s ease, border-color 0.3s ease;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-wrap: nowrap;
+    z-index: 1;
+  }
 
-    @include convertPxToEm(15px);
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    z-index: 1;
+    transform-origin: left center;
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+    background: $gold;
+    transition: transform 0.475s;
+  }
 
-    &:hover::before {
-        transform: scaleX(1);
-    }
+  &:hover {
+    color: $textColor;
+    border-color: $gold; /* Mude a cor da borda no hover */
+  }
 
-    .button-content {
-        position: relative;
-        z-index: 1;
-    }
-
-    &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: -100%;
-        z-index: 1;
-        transform-origin: left center;
-        width: 100%;
-        height: 100%;
-        border-radius: inherit;
-        background: $gold;
-        transition: transform 0.475s;
-    }
-
-    &:hover {
-        color: $textColor;
-        border-color: $gold; /* Mude a cor da borda no hover */
-    }
-
-    &:hover::before {
-        transform: translateX(100%);
-    }
+  &:hover::before {
+    transform: translateX(100%);
+  }
 }
 
 .buttonIII {
-    width: 40px; 
-    height: 40px;
-    border: 2px solid $gold;
-    border-radius: 50%;
-    color: $gold;
-    transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 40px;
+  height: 40px;
+  border: 2px solid $gold;
+  border-radius: 50%;
+  color: $gold;
+  transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    &::before {
-        content: '';
-        position: absolute;
-        inset: 0;
-        margin: auto;
-        width: 35px;
-        height: 35px;
-        border-radius: inherit;
-        scale: 0;
-        z-index: -1;
-        background-color: $gold;
-        transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
-    }
+  &::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    width: 35px;
+    height: 35px;
+    border-radius: inherit;
+    scale: 0;
+    z-index: -1;
+    background-color: $gold;
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+  }
 
-    &:hover::before {
-        scale: 3;
-    }
+  &:hover::before {
+    scale: 3;
+  }
 
-    &:hover {
-        color: $textColor;
-        transform: scale(1.1);
-        box-shadow: 0 0px 20px rgba(226, 139, 30, 0.4);
-    }
+  &:hover {
+    color: $textColor;
+    transform: scale(1.1);
+    box-shadow: 0 0px 20px rgba(226, 139, 30, 0.4);
+  }
 
-    &:active {
-        transform: scale(1);
-    }
+  &:active {
+    transform: scale(1);
+  }
 }
 
 .buttonIV {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 45px;
-    height: 45px;
-    border: none;
-    border-radius: 50%;
-    transition-duration: .4s;
-    cursor: pointer;
-    position: relative;
-    overflow: hidden;
-    text-align: center;
-    background-color: $gold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45px;
+  height: 45px;
+  border: none;
+  border-radius: 50%;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+  background-color: $gold;
+  color: $textColor;
+
+  .btn-icon {
+    transition-duration: 0.3s;
+  }
+
+  .btn-text {
+    position: absolute;
     color: $textColor;
+    width: 100%;
+    font-weight: 600;
+    opacity: 0;
+    transition-duration: 0.4s;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &:hover {
+    width: 110px;
+    transition-duration: 0.4s;
+    border-radius: 30px;
 
     .btn-icon {
-        transition-duration: .3s;
+      color: transparent;
     }
 
     .btn-text {
-        position: absolute;
-        color: $textColor;
-        width: 100%;
-        font-weight: 600;
-        opacity: 0;
-        transition-duration: .4s;
-        z-index: 1; 
-        top: 50%; 
-        left: 50%;
-        transform: translate(-50%, -50%);
+      opacity: 1;
+      transition-duration: 0.4s;
     }
-
-    &:hover {
-        width: 110px;
-        transition-duration: .4s;
-        border-radius: 30px;
-
-        .btn-icon{
-            color: transparent;
-        }
-
-        .btn-text {
-            opacity: 1;
-            transition-duration: .4s;
-        }
-    }
+  }
 }
