--- a/src/assets/SCSS/_colors.scss
+++ b/src/assets/SCSS/_colors.scss
@@ -2,5 +2,5 @@ $mainColor: #020a1a;
 $black: #010815;
 $blueII: rgba(10, 42, 106, 1);
 $textColor: #dff9fb;
-$gold: #E28B1E;
+$gold: #e28b1e;
 $bgInput: rgb(218, 218, 218);
