--- a/src/components/Nav/style.scss
+++ b/src/components/Nav/style.scss
@@ -1,199 +1,197 @@
 @import '@/assets/SCSS/main.scss';
 
 .nav {
-    display: flex;
+  display: flex;
 
-    &__list{ 
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        margin-right: 20px;
+  &__list {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-right: 20px;
+
+    &__item {
+      padding: 2px 0;
+      border-bottom: 2px solid transparent;
+      transition: 0.3s ease-out;
+      position: relative;
+
+      @media (min-width: 1024px) {
+        &:hover {
+          border-bottom-color: $gold;
+
+          .dropdown {
+            display: block;
+            background-color: $black;
+          }
+        }
+      }
+
+      .arrow-down {
+        font-size: 12px;
+      }
+
+      .dropdown {
+        display: none;
+        padding: 20px 0 0;
+        position: absolute;
+        width: auto;
+        transition: 0.3s ease-in;
 
         &__item {
-            padding: 2px 0;
-            border-bottom: 2px solid  transparent;
-            transition: .3s ease-out;
-            position: relative;
-            
-            @media (min-width: 1024px) {
-                    
-                &:hover {
-                    border-bottom-color: $gold;
+          display: block;
+          margin: 8px 0;
+          padding: 8px 16px;
+          background-color: $mainColor;
+          border-bottom: 2px solid transparent;
+          border-radius: 2px;
 
-                    .dropdown {
-                        display: block;
-                        background-color: $black;
-                    }
-                }
-            }
-
-            .arrow-down {
-                font-size: 12px;
-            }
-
-            .dropdown {
-                display: none;
-                padding: 20px 0  0;
-                position: absolute;
-                width: auto;
-                transition: .3s ease-in;
-                
-                &__item {
-                    display: block;
-                    margin: 8px 0;
-                    padding: 8px 16px;
-                    background-color: $mainColor;
-                    border-bottom: 2px solid transparent;
-                    border-radius: 2px;
-                    
-                    &:hover {
-                        border-bottom: 2px solid $gold;
-                    }
-                }
-            }
+          &:hover {
+            border-bottom: 2px solid $gold;
+          }
         }
+      }
     }
+  }
 
-    @media (min-width: $tablet1) and (max-width: $tablet2) {
-        .link-text {
-            @include convertPxToEm(16px)
+  @media (min-width: $tablet1) and (max-width: $tablet2) {
+    .link-text {
+      @include convertPxToEm(16px);
+    }
+  }
+
+  @media (max-width: $mobile) {
+    &__list {
+      display: flex;
+      align-items: flex-start;
+      flex-direction: column;
+      gap: 16px;
+      position: absolute;
+      height: 100vh;
+      width: 0%;
+      left: -100%;
+      top: 74px;
+      background-color: $mainColor;
+      transition: 1s ease-out;
+
+      &__item {
+        padding: 24px;
+
+        .dropdown {
+          position: static;
+          display: none;
+
+          &__item {
+            display: none;
+          }
         }
-    }
 
-    @media (max-width: $mobile) {
-        
-        &__list {
-            display: flex;
-            align-items: flex-start;
-            flex-direction: column;
-            gap: 16px;
-            position: absolute;
-            height: 100vh;
-            width: 0%;
-            left: -100%;
-            top: 74px;
-            background-color: $mainColor;
-            transition: 1s ease-out;
+        &--is-open {
+          .dropdown {
+            padding-top: 0;
+            position: static;
+            display: block;
 
             &__item {
-                padding: 24px;
-
-                .dropdown {
-                    position: static;
-                    display: none;
-                    
-                    &__item {
-                        display: none;
-                    }
-                }
-
-                &--is-open {
-                    .dropdown {
-                        padding-top: 0;
-                        position: static;
-                        display: block;
-
-                        &__item {
-                            display: block;
-                            padding: 8px 16px;
-                        }
-                    }
-                }
+              display: block;
+              padding: 8px 16px;
             }
+          }
         }
-
-        .hamburger-wrapper {
-            margin-left: 24px;
-            position: relative;
-            width: 40px;
-            height: 40px;
-            background-color: $mainColor;
-            padding: 4px;
-            border-radius: 2px;
-            box-shadow: 
-                0 0 5px $gold,
-                0 0 10px $gold,
-                0 0 20px $gold,
-                0 0 40px $gold;
-            cursor: pointer;
-            display: flex;
-            
-            .menu {
-                position: relative;
-                width: 40px;
-                height: 30px;
-                margin: auto;
-                display: flex;
-                align-items: center;
-                transform: rotate(0);
-                transition: 1s;
-
-                &__icon {
-                    position: absolute;
-                    display: block;
-                    width: 0%;
-                    height: 4px;
-                    background: linear-gradient(to right, $gold, $textColor);
-                    border: 2px solid $gold;
-                    border-radius: 30px;
-                    box-shadow:
-                        0 0 5px $gold,
-                        0 0 10px $gold;
-                    transition: .3s;
-                    transition-delay: 1s;
-
-                    &:nth-child(1) {
-                        top: 0;
-                        left: 0;
-                        width: 50%;
-                    }
-
-                    &:nth-child(2) {
-                        width: 100%;
-                        transform: scaleX(1);
-                        opacity: 1;
-                    }
-        
-                    &:nth-child(3) {
-                        bottom: 0;
-                        right: 0;
-                        width: 50%;
-                        transform: rotate(0);
-                    }
-                }
-            }
-
-            &--is-open {
-                &.nav__list {
-                    left: 0;
-                    width: 80vw;
-                    transition: 1s ease-in;
-                }
-
-                .menu {
-                    transform: rotate(315deg);
-
-                    &__icon {
-                        &:nth-child(1) {
-                            width: 100%;
-                            transform: translateY(14px);
-                            transition-delay: 0s;
-                        }
-
-                        &:nth-child(2) {
-                            transform: scaleX(0);
-                            opacity: 0px;
-                        }
-
-                        &:nth-child(3) {
-                            bottom: 14px;
-                            width: 100%;
-                            transform: rotate(90deg);
-                            transition-delay: 0s;
-                        }
-                    }
-                }
-            }
-        }
+      }
     }
+
+    .hamburger-wrapper {
+      margin-left: 24px;
+      position: relative;
+      width: 40px;
+      height: 40px;
+      background-color: $mainColor;
+      padding: 4px;
+      border-radius: 2px;
+      box-shadow:
+        0 0 5px $gold,
+        0 0 10px $gold,
+        0 0 20px $gold,
+        0 0 40px $gold;
+      cursor: pointer;
+      display: flex;
+
+      .menu {
+        position: relative;
+        width: 40px;
+        height: 30px;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        transform: rotate(0);
+        transition: 1s;
+
+        &__icon {
+          position: absolute;
+          display: block;
+          width: 0%;
+          height: 4px;
+          background: linear-gradient(to right, $gold, $textColor);
+          border: 2px solid $gold;
+          border-radius: 30px;
+          box-shadow:
+            0 0 5px $gold,
+            0 0 10px $gold;
+          transition: 0.3s;
+          transition-delay: 1s;
+
+          &:nth-child(1) {
+            top: 0;
+            left: 0;
+            width: 50%;
+          }
+
+          &:nth-child(2) {
+            width: 100%;
+            transform: scaleX(1);
+            opacity: 1;
+          }
+
+          &:nth-child(3) {
+            bottom: 0;
+            right: 0;
+            width: 50%;
+            transform: rotate(0);
+          }
+        }
+      }
+
+      &--is-open {
+        &.nav__list {
+          left: 0;
+          width: 80vw;
+          transition: 1s ease-in;
+        }
+
+        .menu {
+          transform: rotate(315deg);
+
+          &__icon {
+            &:nth-child(1) {
+              width: 100%;
+              transform: translateY(14px);
+              transition-delay: 0s;
+            }
+
+            &:nth-child(2) {
+              transform: scaleX(0);
+              opacity: 0px;
+            }
+
+            &:nth-child(3) {
+              bottom: 14px;
+              width: 100%;
+              transform: rotate(90deg);
+              transition-delay: 0s;
+            }
+          }
+        }
+      }
+    }
+  }
 }
