--- a/src/views/pages/Projects/style.scss
+++ b/src/views/pages/Projects/style.scss
@@ -1,78 +1,78 @@
 @import '@/assets/SCSS/main.scss';
 
 .projects {
-    padding: 120px 0;
-    text-align: center;
+  padding: 120px 0;
+  text-align: center;
 
-    &__nav {
-        display: flex;
-        justify-content: center;
-        gap: 16px;
-        margin-bottom: 32px;
+  &__nav {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    margin-bottom: 32px;
 
-        &__button {
-            cursor: pointer;
-            background-color: transparent;
-            border: none;
-        }
+    &__button {
+      cursor: pointer;
+      background-color: transparent;
+      border: none;
     }
+  }
 
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 24px;
+    row-gap: 32px;
+
+    &__item {
+      height: 570px;
+      border-radius: 24px;
+      background-color: lighten($black, 2%);
+      box-shadow: 0 8px 80px rgba(9, 6, 3, 0.5);
+
+      &__img {
+        width: 100%;
+        height: 300px;
+        border-top-right-radius: 24px;
+        border-top-left-radius: 24px;
+      }
+
+      &__detail {
+        height: 256px;
+        padding: 24px 16px;
+        text-align: justify;
+        position: relative;
+
+        // Use to bypass the standard hover
+        .link-text {
+          z-index: 2;
+          pointer-events: none;
+        }
+
+        //
+        .buttonII {
+          position: absolute;
+          bottom: 24px;
+        }
+      }
+    }
+  }
+
+  @media (min-width: $tablet1) and (max-width: $tablet3) {
     &__list {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        column-gap: 24px;
-        row-gap: 32px;
-
-        &__item {
-            height: 570px;
-            border-radius: 24px;
-            background-color: lighten($black, 2%);
-            box-shadow: 0 8px 80px rgba(9, 6, 3, .5);
-
-            &__img {
-                width: 100%;
-                height: 300px;
-                border-top-right-radius: 24px;
-                border-top-left-radius: 24px;
-            }
-
-            &__detail {
-                height: 256px;
-                padding: 24px  16px;
-                text-align: justify;
-                position: relative;
-
-                // Use to bypass the standard hover
-                .link-text {
-                    z-index: 2;
-                    pointer-events: none;
-                }
-
-                // 
-                .buttonII {
-                    position: absolute;
-                    bottom: 24px;
-                }
-            }
-        }
+      grid-template-columns: repeat(2, 1fr);
     }
+  }
 
-    @media (min-width: $tablet1) and (max-width: $tablet3) {
-        &__list {
-            grid-template-columns: repeat(2, 1fr);
-        }
+  @media (max-width: $mobile) {
+    .container {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
     }
-    
-    @media (max-width: $mobile) {
-        .container {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-        }
-        &__list {
-            grid-template-columns: 1fr;
-            max-width: 550px;
-            width: 100%;
-        }
+    &__list {
+      grid-template-columns: 1fr;
+      max-width: 550px;
+      width: 100%;
     }
+  }
 }
