--- a/src/views/pages/Services/style.scss
+++ b/src/views/pages/Services/style.scss
@@ -1,73 +1,77 @@
 @import '@/assets/SCSS/main.scss';
 
 .services {
-    padding: 120px 0;
-    background-color: lighten($black, 2%);
-    gap: 24px;
-    text-align: center;
+  padding: 120px 0;
+  background-color: lighten($black, 2%);
+  gap: 24px;
+  text-align: center;
 
-    .container {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
+  .container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
 
-    //control the size of the text tag p
-    .middle-text {
-        max-width: 655px;
+  //control the size of the text tag p
+  .middle-text {
+    max-width: 655px;
+    width: 100%;
+  }
+
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 24px;
+    row-gap: 32px;
+    margin-top: 32px;
+
+    &__item {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      position: relative;
+      height: 470px;
+      z-index: 100;
+      padding: 0 24px 50px;
+      text-align: justify;
+      border-radius: 10px;
+      bottom: 32px;
+      background-size: 100% 100%;
+      box-shadow: 0 8px 80px rgba(40, 40, 40, 0.1);
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          180deg,
+          rgba(4, 12, 22, 0) 0%,
+          #040c16 100%
+        );
+        z-index: -1;
+        border-radius: 10px;
+      }
     }
+  }
 
+  @media (min-width: $tablet1) and (max-width: $tablet3) {
     &__list {
-        display: grid;
-        grid-template-columns:  repeat(3, 1fr);
-        column-gap: 24px;
-        row-gap: 32px;
-        margin-top: 32px;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
 
-        &__item {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            position: relative;
-            height: 470px;
-            z-index: 100;
-            padding: 0 24px 50px;
-            text-align: justify;
-            border-radius: 10px;
-            bottom: 32px;
-            background-size: 100% 100%;
-            box-shadow: 0 8px 80px rgba(40, 40, 40, .1);
-            
-            &::after {
-                content: "";
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background: linear-gradient(180deg, rgba(4, 12, 22, 0.00) 0%, #040C16 100%);
-                z-index: -1;
-                border-radius: 10px;
-            }
-        }
+  @media (max-width: $mobile) {
+    &__list {
+      grid-template-columns: 1fr;
+      max-width: 550px;
+      width: 100%;
     }
 
-    @media (min-width: $tablet1) and (max-width: $tablet3) {
-        &__list {
-            grid-template-columns: repeat(2, 1fr);
-        }
+    .middle-text {
+      text-align: justify;
     }
-
-    @media (max-width: $mobile) {
-        &__list {
-            grid-template-columns: 1fr;
-            max-width: 550px;
-            width: 100%;
-        }
-
-        .middle-text {
-            text-align: justify;
-        }
-    }
+  }
 }
