--- a/src/assets/SCSS/_global.scss
+++ b/src/assets/SCSS/_global.scss
@@ -7,6 +7,10 @@
   font-size: #{$emValue}em;
 }
 
+@mixin bgColor($color1, $color2) {
+  background-image: radial-gradient();
+}
+
 @mixin formText {
   color: #000;
   font-weight: 500;
