--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -5,7 +5,7 @@
   z-index: 1000;
   top: 0;
   padding: 15px 0;
-  background-image: linear-gradient(to left, $blueII -38%, $mainColor 18%);
+  background-color: $mainColor;
   box-shadow: 0 0 30px rgba(80, 94, 247, 0.2);
 
   .container {
