--- a/src/components/Nav/style.scss
+++ b/src/components/Nav/style.scss
@@ -14,6 +14,7 @@
       border-bottom: 2px solid transparent;
       transition: 0.3s ease-out;
       position: relative;
+      cursor: pointer;
 
       @media (min-width: 1024px) {
         &:hover {
