finalizado projeto, pronto para produção

--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -53,6 +53,8 @@
     padding: 8px;
     border-radius: 10px;
     background-color: $bgInput;
+    outline: none;
+    border: none;
 
     @include formText;
   }
