--- a/src/components/Nav/style.scss
+++ b/src/components/Nav/style.scss
@@ -73,6 +73,7 @@
       top: 74px;
       background-color: $mainColor;
       transition: 1s ease-out;
+      overflow-y: scroll;
 
       &__item {
         padding: 24px;
