--- a/src/views/pages/Projects/style.scss
+++ b/src/views/pages/Projects/style.scss
@@ -22,13 +22,14 @@
     grid-template-columns: repeat(3, 1fr);
     column-gap: 24px;
     row-gap: 32px;
+    transition: 5s;
 
     &__item {
       height: 570px;
       border-radius: 24px;
       background-color: lighten($black, 2%);
       box-shadow: 0 8px 80px rgba(9, 6, 3, 0.5);
-
+      
       &__img {
         width: 100%;
         height: 300px;
